--- a/taskDetails.html
+++ b/taskDetails.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="">
 
+
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Student Planner</title>
+     <title>Student Planner</title>
 
     <body>
         <h1 class="text-center">Student Planner</h1>
@@ -30,4 +28,6 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
 
-</html>
+
+
+</head>
