--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
+
 <html lang="">
 
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Required Bootstrap CSS and JS content-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
     <title>Student Planner</title>
 
     <body>
         <h1 class="text-center">Student Planner</h1>
-        <h2>MSCI 342 Project</h2>
+        <!--<h2>MSCI 342 Project</h2> -->
+
+        <div class="row">
+            <div class="col-md-1">
+
+                <form action="login.php" method="post">
+
+                    <h3>WATIAM</h3>
+                    <input type="text" name="WATIAM" value="<?php echo $submitted_username; ?>" />
+                    <br>
+                    <h3>password</h3>
+                    <input type="password" name="password" value="" />
+                    <br><br>
+                    <button type="submit" value="Login">Log In</button>
+                </form>
+            </div>
+        </div>
 
     </body>
 
