--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 
     </body>
 
-    <form>
+    <form method="POST" action = "taskDetails.php"></form>
         <div class="form-group">
           <label for="exampleInputEmail1">Task Title</label>
-          <input type="text" class="form-control" id="taskTitle" aria-describedby="emailHelp">
+          <input type="text" class="form-control" name="taskTitle" aria-describedby="emailHelp">
           <small id="taskHelp" class="form-text text-muted">Give your task a descriptive title</small>
         </div>
         <div class="form-group">
           <label for="taskDescription">Task Description</label>
-          <input type="text" class="form-control" id="tastDecrip">
+          <input type="text" class="form-control" name="tastDecrip">
         </div>
         <div class="form-group form-check">
           
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" name="submit">Submit</button>
       </form>
 
 </html>
