--- a/taskDetails.html
+++ b/taskDetails.html
@@ -12,7 +12,7 @@
 
     </body>
 
-    <form method="POST">
+    <form method="POST" action = "taskDetails.php"></form>
         <div class="form-group">
           <label for="exampleInputEmail1">Task Title</label>
           <input type="text" class="form-control" id="taskTitle" aria-describedby="emailHelp">
