--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 
     </body>
 
-    <form method="POST" action = "taskDetails.php"></form>
+    <form action="taskDetails.php" method="POST">
+
         <div class="form-group">
-          <label for="exampleInputEmail1">Task Title</label>
-          <input type="text" class="form-control" name="taskTitle" aria-describedby="emailHelp">
-          <small id="taskHelp" class="form-text text-muted">Give your task a descriptive title</small>
+            <label for="exampleInputEmail1">Task Title</label>
+            <input type="text" class="form-control" name="taskTitle" aria-describedby="emailHelp"></input>
+            <small id="taskHelp" class="form-text text-muted">Give your task a descriptive title</small>
         </div>
+
         <div class="form-group">
-          <label for="taskDescription">Task Description</label>
-          <input type="text" class="form-control" name="tastDecrip">
+            <label for="taskDescription">Task Description</label>
+            <input type="text" class="form-control" name="tastDecription"></input>
         </div>
-        <div class="form-group form-check">
-          
-        </div>
+
         <button type="submit" class="btn btn-primary" name="submit">Submit</button>
-      </form>
+    </form>
 
 </html>
