--- a/taskDetails.html
+++ b/taskDetails.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-     <title>Student Planner</title>
+    <title>Student Planner</title>
 
     <body>
         <h1 class="text-center">Student Planner</h1>
@@ -12,21 +12,21 @@
 
     </body>
 
-    <form method="POST" action = "taskDetails.php"></form>
+    <form action="taskDetails.php" method="POST">
         <div class="form-group">
-          <label for="exampleInputEmail1">Task Title</label>
-          <input type="text" class="form-control" id="taskTitle" aria-describedby="emailHelp">
-          <small id="taskHelp" class="form-text text-muted">Give your task a descriptive title</small>
+            <label for="exampleInputEmail1">Task Title</label>
+            <input type="text" class="form-control" name="taskTitle" aria-describedby="emailHelp">
+            <small id="taskHelp" class="form-text text-muted">Give your task a descriptive title</small>
         </div>
         <div class="form-group">
-          <label for="taskDescription">Task Description</label>
-          <input type="text" class="form-control" id="tastDecrip">
+            <label for="taskDescription">Task Description</label>
+            <input type="text" class="form-control" name="tastDecrip">
         </div>
         <div class="form-group form-check">
-          
+
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+        <button type="submit" class="btn btn-primary" name="submit">Submit</button>
+    </form>
 
 
 
