--- a/taskDetails.html
+++ b/taskDetails.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="">
 
-
+<!--This file contains the html code for the taskdetail page -->
 <head>
+<!-- the link allows bootstrap styling to work on the page -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Student Planner</title>
 
@@ -11,7 +12,7 @@
         <h2>MSCI 342 Project</h2>
 
     </body>
-
+<!-- form page which will pass the user information -->
     <form action="taskDetails.php" method="POST">
         <div class="form-group">
             <label for="exampleInputEmail1">Task Title</label>
