--- a/Register.html
+++ b/Register.html
@@ -1,3 +1,41 @@
-<body>
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-</body>
+    <!-- Required Bootstrap CSS and JS content-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <link href="CSS/LogIn.css" rel="stylesheet">
+    <title>Student Planner</title>
+
+    <body class="text-center">
+
+        <div class="row">
+            <div class="col-md-1">
+
+                <h1>Register</h1>
+                <form action="register.php" method="post">
+                    <h3>WATIAM</h3>
+                    <input type="text" name="WATIAM" value="" />
+                    <h3>First Name</h3>
+                    <input type="text" name="firstName" value="" />
+                    <h3>Last Name</h3>
+                    <input type="text" name="lastName" value="" />
+                    <h3>Program</h3>
+                    <br/>
+                    <input type="text" name="program" value="" />
+                    <h3>Password</h3>
+                    <br/>
+                    <input type="password" name="password" value="" />
+                    <br><br>
+                    <input type="submit" value="Register"></input>
+                </form>
+
+            </div>
+        </div>
+
+    </body>
+
+</head>
