--- a/index.html
+++ b/index.html
@@ -11,30 +11,36 @@
     <!-- Required Bootstrap CSS and JS content-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <link href="CSS/LogIn.css" rel="stylesheet">
 
     <title>Student Planner</title>
 
-    <body>
-        <h1 class="text-center">Student Planner</h1>
-        <!--<h2>MSCI 342 Project</h2> -->
+    <body class="text-center">
+        <h1>Student Planner</h1>
 
-        <div class="row">
-            <div class="col-md-1">
+        <div>
 
-                <form action="login.php" method="post">
 
-                    <h3>WATIAM</h3>
-                    <input type="text" name="WATIAM" value="<?php echo $submitted_username; ?>" />
-                    <br>
-                    <h3>password</h3>
-                    <input type="password" name="password" value="" />
-                    <br><br>
-                    <button type="submit" value="Login">Log In</button>
-                </form>
-            </div>
         </div>
 
+        <div>
+            <form action="login.php" class="form-signin" method="post">
+
+                <img class="mb-4" src="imgs/Profile-Icon.jpg" alt="" width="35" height="35">
+                <label for="inputWATIAM" class="sr-only">WATIAM</label>
+                <input type="text" name="WATIAM" value="" class="form-control" placeholder="WATIAM" required/>
+
+                <img class="mb-4" src="imgs/Login-Key.jpg" alt="" width="35" height="35">
+                <label for="inputPassword" class="sr-only">Password</label>
+                <input type="password" name="password" class="form-control" placeholder="Password" required/>
+
+                <button class="btn btn-lg btn-primary btn-block" type="submit" value="Login">Log In</button>
+                <a href="Register.html">Register</a>
+                <p class="mt-5 mb-3 text-muted">&copy; MSCI 342, 2020</p>
+            </form>
+        </div>
     </body>
 
-    
+</head>
+
 </html>
