--- a/Register.html
+++ b/Register.html
@@ -7,34 +7,33 @@
     <!-- Required Bootstrap CSS and JS content-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <link href="CSS/LogIn.css" rel="stylesheet">
+    <link href="CSS/Register.css" rel="stylesheet">
+
     <title>Student Planner</title>
 
     <body class="text-center">
 
-        <div class="row">
-            <div class="col-md-1">
+        <h1>Register</h1>
 
-                <h1>Register</h1>
-                <form action="register.php" method="post">
-                    <h3>WATIAM</h3>
-                    <input type="text" name="WATIAM" value="" />
-                    <h3>First Name</h3>
-                    <input type="text" name="firstName" value="" />
-                    <h3>Last Name</h3>
-                    <input type="text" name="lastName" value="" />
-                    <h3>Program</h3>
-                    <br/>
-                    <input type="text" name="program" value="" />
-                    <h3>Password</h3>
-                    <br/>
-                    <input type="password" name="password" value="" />
-                    <br><br>
-                    <input type="submit" value="Register"></input>
-                </form>
+        <form action="register.php" class="form-register" method="POST">
 
-            </div>
-        </div>
+            <label for="inputWATIAM" class="sr-only">WATIAM</label>
+            <input type="text" name="WATIAM" value="" class="form-control" placeholder="WATIAM" required/>
+
+            <label for="inputfirstname" class="sr-only">firstName</label>
+            <input type="text" name="firstName" value="" class="form-control" placeholder="firstName" required/>
+
+            <label for="inputlastname" class="sr-only">lastName</label>
+            <input type="text" name="lastName" value="" class="form-control" placeholder="lastName" required/>
+
+            <label for="inputprogram" class="sr-only">program</label>
+            <input type="text" name="program" value="" class="form-control" placeholder="program" required/>
+
+            <label for="inputpassword" class="sr-only">password</label>
+            <input type="password" name="password" value="" class="form-control" placeholder="password" required/>
+
+            <button class="btn btn-lg btn-primary btn-block" type="submit" value="Register">Register</button>
+        </form>
 
     </body>
 
