--- a/boardView.html
+++ b/boardView.html
@@ -50,6 +50,7 @@
       </div>
       <div class="col-md-4">
         <h2>TO DO</h2>
+        <a href="taskDetails.html">Add a Task</a>
           <form action = "listView.php">
             <button>expand</button>
             <br>
